# CEProjectTemplates

./: .gitignore  CMakePluginWithModule.cryproject  LICENSE  LICENSE.txt  LaunchWithGameZero5.3.cryproject  LaunchWithGameZero5.4.cryproject  Master Branch.txt  MultiPluginExample.cryproject  README.md  cryplugin.csv  readme.md  readme.txt
Code/: CMakeLists.txt  CryModuleSystem.cpp  CryModuleSystem.h  ModuleImpl.cpp  ModuleImpl.h  ModuleSystem.cpp  ModuleSystem.h  StdAfx.h  dummy.h
Code/Common/: CMakeLists.txt  IModule.h  IModuleImpl.h  ModuleCommon.props  ModuleCommon.vcxproj.user.in  platform.inl
Code/Implementations/: CMakeLists.txt
Code/Implementations/impl_a/: CMakeLists.txt  CryPlugin.cpp  CryPlugin.h  ExampleImpl.h
Code/Implementations/impl_b/: CMakeLists.txt  CryPlugin.cpp  CryPlugin.h  ExampleImpl.cpp  ExampleImpl.h  stdafx.h
Code/SDKs/: CMakeLists.txt
Code/SDKs/ExampleSDK/: CMakeLists.txt
Code/SDKs/ExampleSDK/lib/: ThirdPartyLibDebug_Win32.lib  ThirdPartyLibDebug_x64.lib  ThirdPartyLibRelease_Win32.lib
Code/System/: CMakeLists.txt  CryPlugin.cpp  CryPlugin.h  ExampleImpl.cpp  stdafx.h
Code/modules/ExampleModule/: CMakeLists.txt  CryModuleImpl.cpp  ModuleImpl.cpp  ModuleImpl.h  StdAfx.cpp  StdAfx.h
gamezero/: game.cfg  place_gamezero_assets_here.txt
lib/: ThirdPartyLibRelease_x64.lib
project/: ThirdPartyLib.vcxproj  ThirdPartyLib.vcxproj.filters
src/: PublicInterface.cpp  PublicInterface.h  dllmain.cpp  main.cpp
